Style grid to make it possible having a fix number of elements inside it while not being overflown

--- a/style.css
+++ b/style.css
@@ -20,12 +20,11 @@ body {
   display: grid;
   place-items: center;
   background-color: black;
-  padding: 5px;
+  width: 700px;
+  height: 700px;
 }
 
 .grid-item {
-  height: 30px;
-  width: 30px;
   background-color: white;
   border-style: solid;
   border-width: 1px;
